--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pydantic==2.5.2
-matplotlib==3.8.2
-pydantic-ai==0.7.1
-nest-asyncio==1.5.8
-langchain==0.1.4
-langchain-community==0.0.13
-langchain-groq==0.0.3 
+pydantic
+matplotlib
+pydantic-ai
+nest-asyncio
+langchain
+langchain-community
+langchain-groq
